--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "compress:css": "node-sass public/css/style.prefix.css public/css/style.css --output-style compressed",
       "build:css": "npm-run-all compile:sass prefix:css compress:css",
       "start": "node server.js",
-      "dev": "nodemon server.js",
+      "dev": "nodemon serverChat.js",
       "start:prod": "NODE_ENV=production nodemon server.js",
       "debug": "ndb server.js",
       "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
@@ -42,6 +42,7 @@
       "pug": "^3.0.0",
       "sharp": "^0.25.4",
       "slugify": "^1.3.6",
+      "socketio": "^1.0.0",
       "stripe": "^8.89.0",
       "validator": "^13.0.0",
       "xss-clean": "^0.1.1"
